package vop;

public class Circle extends Ellipse{
    Circle(double r1) {
        super(r1,r1);
    }
}
